# mscr

./: .gitignore  CMakeLists.txt  README.md
src/: image.cpp  image.hpp  json.cpp  json.hpp  main.cpp  scanner.cpp  scanner.hpp  strip.cpp  strip.hpp  text.cpp  text.hpp
